--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -5,33 +5,31 @@
   margin: 0;
   box-sizing: border-box;
   font-family: 'Arial Narrow', Arial, sans-serif
-  font-optical-sizing: auto;
-  font-weight: <weight>;
   font-style: normal;
-  font-variation-settings:
-    "wdth" 100;
 }
 
 
 .text-home {
   font-family: 'Arial Narrow', Arial, sans-serif
-  font-optical-sizing: auto;
   font-weight: 800;
   font-style: normal;
-  font-variation-settings:
-    "wdth" 100;
+}
+
+.logo {
+  height: 180px;
 }
 
 
 /*------------COLOR NAV--------------*/
 .bg-ryf {
-  background-color: #ffffff;
+  background-color: #156082;
 }
 
 
 .text-maule {
-  color: #000000;
+  color: #ffffff;
   font-weight: 800;
+  
 }
 
 
@@ -99,7 +97,7 @@
   align-items: center;
   height: 100vh;
   padding: 20px;
-  padding-top: 145px;
+  padding-top: 255px;
   padding-bottom: 100px;
 }
 .content-container {
@@ -120,7 +118,7 @@
   margin-left: 50px;
 }
 .text-content h1 {
-  font-size: 2.5em;
+  font-size: 2.5rem;
   color: #333;
   margin: 0 0 10px;
   line-height: 1.2;
@@ -186,6 +184,16 @@
   body {
     padding-top: 145px;
   }
+  .text-content h1 {
+    font-size: 1.5rem;
+    color: #333;
+    margin: 0 0 10px;
+    line-height: 1.2;
+  }
+
+  .logo {
+    height: 120px;
+  }
 }
 /* FIN PAGINA DE INICIO */
 
@@ -200,7 +208,7 @@
   display: flex;
   align-items: center;
   justify-content: flex-start;
-  padding-top: 145px;
+  padding-top: 185px;
   padding-bottom: 50px;
 }
 
@@ -420,7 +428,7 @@
   display: flex;
   align-items: center;
   justify-content: flex-start;
-  padding-top: 140px;
+  padding-top: 180px;
   padding-bottom: 50px;
 }
 
