--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -68,7 +68,7 @@
 /* FIN NAVBAR */
 
 .bg-translucido {
-  background-color: rgba(255, 255, 255, 0.541) !important;
+  background-color: #156082a8 !important;
   backdrop-filter: blur(6px); /* opcional: efecto vidrio */
   transition: background-color 0.3s ease;
 }
